2006-10-30  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sci_cb.c: Add extra indentation for Python after a colon.


2006-10-29  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c, src/prefs.c, src/geany.h,
   src/keyfile.c, src/ui_utils.c, src/main.c:
   Added an Apply button to preferences dialog.
   New setting to show/hide the Quit toolbar item.
   New setting to show/hide notebook tabs.
 * src/document.c, src/treeviews.c, src/treeviews.h:
   Colour also the open files list items according to their changed
   state.
 * src/callbacks.c, src/callbacks.h, src/msgwindow.c, src/msgwindow.h,
   src/treeviews.c, src/treeviews.h, src/geany.h:
   Moved all treeview related callback functions from callbacks.c to
   msgwindow.c and treeviews.c.
 * src/document.c: Fixed bug when setting colour of open files list
                   entry on new, unnamed files.


2006-10-28  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.c:
   Add temporary fix for sci infinite loop in Document::GetColumn(int)
   when current pos is beyond document end (can occur when removing
   blocks of selected lines especially brace sections near end of
   file).


2006-10-28  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook:
   Some small updates.
   Got rid of &app; entitity.
   Extended description of encoding support.


2006-10-27  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, src/filetypes.c, src/filetypes.h,
   data/filetypes.java, data/filetypes.cpp, data/filetypes.ferite,
   data/filetypes.c, data/filetypes.d:
   Add filetypes_get_conf_extension() and use in highlighting.c.
   Fix a memory leak in load_keyfiles().
   Group C-like default syntax in init_c_like_styleset().
   Make C-like comment colour darker; make globalclass brighter to
   distinguish it from word colour.
   Make Java use same default syntax highlighting colours as C.
 * src/utils.c: